<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>elasticsearch-action-updatebyquery</name>
    <description>
        The Update By Query feature, as an action plugin for ElasticSearch.
    </description>
    <inceptionYear>2013</inceptionYear>

    <groupId>com.yakaz.elasticsearch.plugins</groupId>
    <artifactId>elasticsearch-action-updatebyquery</artifactId>
    <version>2.6.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <url>http://github.com/yakaz/elasticsearch-action-updatebyquery</url>
    <scm>
        <connection>scm:git:git@github.com:yakaz/elasticsearch-action-updatebyquery.git</connection>
        <developerConnection>scm:git:git@github.com:yakaz/elasticsearch-action-updatebyquery.git</developerConnection>
        <url>https://github.com/yakaz/elasticsearch-action-updatebyquery.git</url>
      <tag>HEAD</tag>
  </scm>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>ofavre</id>
            <name>Olivier Favre</name>
            <email>http://www.google.com/recaptcha/mailhide/d?k=01BFRL3yhSOUyxYhgio4AZrQ==&amp;c=MG8swJyru2wFd6B6QWz--HIx_5O38r35CjjdTzn025Q=</email>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <properties>
        <elasticsearch.version>1.6.0</elasticsearch.version>
        <lucene.version>4.10.4</lucene.version>
        <randomizedtesting-runner.version>2.1.11</randomizedtesting-runner.version>
        <groovy.version>2.4.0</groovy.version>
        <tests.jvms>1</tests.jvms>
        <tests.shuffle>true</tests.shuffle>
        <tests.output>onerror</tests.output>
        <tests.client.ratio />
        <es.logger.level>INFO</es.logger.level>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.carrotsearch.randomizedtesting</groupId>
            <artifactId>randomizedtesting-runner</artifactId>
            <version>${randomizedtesting-runner.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-test-framework</artifactId>
            <version>${lucene.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <!-- This is an optional dependency of ES and is not transitively loaded. -->
            <!-- Somehow necessary to help ES load the internal lang-groovy plugin. -->
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>${groovy.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.2</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

     <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>cobertura-maven-plugin</artifactId>
                    <version>2.5.1</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.carrotsearch.randomizedtesting</groupId>
                <artifactId>junit4-maven-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>tests</id>
                        <phase>test</phase>
                        <goals>
                            <goal>junit4</goal>
                        </goals>
                        <configuration>
                            <heartbeat>20</heartbeat>
                            <jvmOutputAction>pipe,warn</jvmOutputAction>
                            <leaveTemporary>true</leaveTemporary>
                            <listeners>
                                <report-ant-xml mavenExtensions="true" dir="${project.build.directory}/surefire-reports" />
                                <report-text showThrowable="true" showStackTraces="true" showOutput="${tests.output}" showStatusOk="false" showStatusError="true" showStatusFailure="true" showStatusIgnored="true" showSuiteSummary="true" timestamps="false" />
                                <report-execution-times file="${basedir}/.local-execution-hints.log" />
                            </listeners>
                            <assertions>
                                <enable />
                                <disable package="${tests.assertion.disabled}" />
                                <!-- pass org.elasticsearch to run without assertions -->
                            </assertions>
                            <parallelism>${tests.jvms}</parallelism>
                            <balancers>
                                <execution-times>
                                    <fileset dir="${basedir}" includes=".local-execution-hints.log" />
                                </execution-times>
                            </balancers>
                            <includes>
                                <include>**/*Tests.class</include>
                                <include>**/*Test.class</include>
                            </includes>
                            <excludes>
                                <exclude>**/Abstract*.class</exclude>
                                <exclude>**/*StressTest.class</exclude>
                            </excludes>
                            <argLine>
                                ${tests.jvm.argline}
                            </argLine>
                            <jvmArgs>
                                <param>-Xmx512m</param>
                                <param>-Xss256k</param>
                                <param>-XX:MaxPermSize=128m</param>
                                <param>-XX:MaxDirectMemorySize=512m</param>
                                <param>-Des.logger.prefix=</param>
                            </jvmArgs>
                            <shuffleOnSlave>${tests.shuffle}</shuffleOnSlave>
                            <sysouts>${tests.verbose}</sysouts>
                            <seed>${tests.seed}</seed>
                            <haltOnFailure>${tests.failfast}</haltOnFailure>
                            <systemProperties>
                                <java.io.tmpdir>.</java.io.tmpdir> <!-- we use '.' since this is different per JVM-->
                                <!-- RandomizedTesting library system properties -->
                                <tests.jvm.argline>${tests.jvm.argline}</tests.jvm.argline>
                                <tests.appendseed>${tests.appendseed}</tests.appendseed>
                                <tests.iters>${tests.iters}</tests.iters>
                                <tests.maxfailures>${tests.maxfailures}</tests.maxfailures>
                                <tests.failfast>${tests.failfast}</tests.failfast>
                                <tests.class>${tests.class}</tests.class>
                                <tests.method>${tests.method}</tests.method>
                                <tests.nightly>${tests.nightly}</tests.nightly>
                                <tests.badapples>${tests.badapples}</tests.badapples>
                                <tests.weekly>${tests.weekly}</tests.weekly>
                                <tests.slow>${tests.slow}</tests.slow>
                                <tests.awaitsfix>${tests.awaitsfix}</tests.awaitsfix>
                                <tests.slow>${tests.slow}</tests.slow>
                                <tests.timeoutSuite>${tests.timeoutSuite}</tests.timeoutSuite>
                                <tests.showSuccess>${tests.showSuccess}</tests.showSuccess>
                                <tests.integration>${tests.integration}</tests.integration>
                                <tests.cluster_seed>${tests.cluster_seed}</tests.cluster_seed>
                                <tests.client.ratio>${tests.client.ratio}</tests.client.ratio>
                                <tests.enable_mock_modules>${tests.enable_mock_modules}</tests.enable_mock_modules>
                                <tests.assertion.disabled>${tests.assertion.disabled}</tests.assertion.disabled>
                                <tests.rest>${tests.rest}</tests.rest>
                                <tests.rest.suite>${tests.rest.suite}</tests.rest.suite>
                                <tests.rest.spec>${tests.rest.spec}</tests.rest.spec>
                                <tests.network>${tests.network}</tests.network>
                                <es.node.local>${env.ES_TEST_LOCAL}</es.node.local>
                                <es.node.mode>${es.node.mode}</es.node.mode>
                                <es.logger.level>${es.logger.level}</es.logger.level>
                                <tests.security.manager>${tests.security.manager}</tests.security.manager>
                                <java.awt.headless>true</java.awt.headless>
                                <!-- everything below is for security manager / test.policy -->
                                <junit4.tempDir>${project.build.directory}</junit4.tempDir>
                                <java.security.policy>${basedir}/dev-tools/tests.policy</java.security.policy>
                            </systemProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- we skip surefire to work with randomized testing above -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <nohelp>true</nohelp>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadoc</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                    <descriptors>
                        <descriptor>${basedir}/src/main/assemblies/plugin.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.5.1</version>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.5.1</version>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
